# RoboDeploy

./: .gitattributes  .gitignore  ARCHITECTURE.md  AUDIT_REPORT.md  BACKEND_SENSOR_ENV_EVALUATION.md  BACKEND_SENSOR_ENV_STATUS.md  BROAD_GOALS.md  BROAD_GOALS_PROGRESS.md  CHANGELOG.md  CONTRACTS.md  CONTRIBUTING.md  DEFECT_CATALOG.md  DEFECT_CATALOG_SUPPLEMENT.md  MASTER_PLAN_GOAL10.md  MASTER_PLAN_GOAL11.md  MASTER_PLAN_GOAL12.md  MASTER_PLAN_GOAL13.md  MASTER_PLAN_GOAL14.md  MASTER_PLAN_GOAL15.md  MASTER_PLAN_GOAL16.md  MASTER_PLAN_GOAL17.md  MASTER_PLAN_GOAL18.md  MASTER_PLAN_GOAL19.md  MASTER_PLAN_GOAL20.md  MASTER_PLAN_GOAL21.md  MASTER_PLAN_GOAL22.md  MASTER_PLAN_GOAL23.md  MASTER_PLAN_GOAL3.md  MASTER_PLAN_GOAL4.md  MASTER_PLAN_GOAL5.md  MASTER_PLAN_GOAL6.md  MASTER_PLAN_GOAL7.md  MASTER_PLAN_GOAL8.md  MASTER_PLAN_GOAL9.md  MUJOCO_LOG.TXT  PICK_PARITY_PROGRESS.md  README.md  REPRESENTATION_UPGRADE_PLAN.md  SENSORS_AND_ENV_PLAN.md  SENSOR_INTEGRATION_TODO.md  (+4 more)
.github/: copilot-instructions.md
.github/workflows/: benchmark.yml  docs.yml  ppo-nightly.yml  publish.yml  test.yml
benchmarks/: README.md  __init__.py
benchmarks/leaderboard/: schema.json
benchmarks/manipulation_v1/: spec.json  spec.schema.json
benchmarks/sim2real/: __init__.py  spec.json
conda-recipe/: meta.yaml
demo/: README.md  __init__.py  run_pick.py
demo/config/: kuka_pick.yaml
demo/policies/: __init__.py  reach_pick_place.py  reach_pick_place.yaml  sensor_reach_pick.py
demo/scenes/: __init__.py  pick_table.py
demo/sensors/: __init__.py  prop_pose.py
demo/tasks/: __init__.py  pick_place.py
docker/: Dockerfile.cpu  Dockerfile.gpu  Dockerfile.isaacsim  Dockerfile.ros2  README.md  demo_gazebo_pick.sh  docker-compose.yml
docs/: API_REFERENCE.md  BACKEND_SETUP.md  CLI_REFERENCE.md  COOKBOOK.md  DEMO_RUNBOOK.md  MIGRATION_0.2.md  PLATFORM_STATUS.md  PLUGINS.md  POLICY_CREATION.md  PROJECT_GUIDE.md  REFACTOR_PLAN.md  RELEASE.md  SAFETY.md  SCENE_DEFINITION.md  SENSOR_INTEGRATION.md  SIM2REAL.md  SO101_REAL.md  TASK_CREATION.md  TRAINING.md  index.md  isaacsim_gpu_smoke_log.example.txt
examples/: README.md  __init__.py  _bootstrap.py  cli.py  cli_smoke_no_sim.py  env_from_preset.py  franka_robomimic_demo.py  franka_sim_viewer_demo.py  kuka_pick_demo.py  multiagent_configs.py  preset_vecenv_demo.py  replay_demo.py  ros2_rviz_minimal.py  teleop_keyboard_kuka.py  teleop_keyboard_stub.py  teleop_so101_real.py  teleop_spacemouse_franka.py  train_bc_dummy.py  train_ppo_kuka_pick.py  train_ppo_reach.py  vecenv_from_presets.py
examples/plugin_robot_demo/: README.md  pyproject.toml
examples/plugin_robot_demo/plugin_robot_demo/: __init__.py  robot.py  task.py
plans/: GOAL_01_REPRESENTATION_BOILERPLATE.md  GOAL_02_TRAINING_LOOP.md  GOAL_03_SENSOR_INTEGRATION.md  GOAL_04_TELEOP_DATA_COLLECTION.md  GOAL_05_SIM2REAL.md  GOAL_06_BACKEND_PARITY.md  GOAL_07_DOCS_SCAFFOLDER.md  GOAL_08_MULTIROBOT_DISTRIBUTION.md  GOAL_09_LEARNED_POLICY.md  GOAL_10_OBSERVABILITY_REPLAY.md  GOAL_11_BENCHMARKS_EVAL.md  GOAL_12_SAFETY.md  INTEGRATION_STATUS.md  README.md  V1_PICK_PLACE_DEMO_PLAN.md  WAVE2_01_GAZEBO_LIVE_E2E.md  WAVE2_02_RELEASE_PYPI_CONDA.md  WAVE2_03_VISION_AND_REAL_HARDWARE.md  WAVE2_04_TRAINING_PRODUCTION.md  WAVE2_05_POLISH.md
robodeploy/: __init__.py  action_adapter.py  action_trajectory.py  assets.py  behavior.py  behavior_translators.py  bridge.py  builtins.py  cli.py  cli_assets.py  cli_config.py  cli_docs.py  cli_doctor.py  cli_helpers.py  cli_observability.py  cli_safety.py  cli_scene.py  cli_teleop.py  dataset_export.py  demo_recording.py  env.py  linter.py  obs_pipeline.py  presets_loader.py  scaffold.py  scene_builder.py  vec_env.py
scripts/: check_docker_engine.ps1  isaacsim_headless_smoke.py  pypi_dry_run.ps1  wsl24-bootstrap.sh  wsl_gazebo_pick_smoke.sh  wsl_rviz_pick_smoke.sh  wsl_rviz_smoke.sh
tests/: HARDWARE_TESTS.md  live_sensor_fixtures.py  test_action_adapter.py  test_action_space_negotiation.py  test_action_trajectory.py  test_asset_loader.py  test_assets_manifest.py  test_ati_ft_overflow.py  test_backend_parity.py  test_backend_registry.py  test_batched_step.py  test_behavior_profile.py  test_benchmark_reproducibility.py  test_benchmarks.py  test_bind_runtime.py  test_builtins_import.py  test_calibration_live.py  test_calibration_store.py  test_checkerboard_extrinsic.py  test_cli.py  test_color_blob.py  test_conda_recipe.py  test_contact_sensor.py  test_dataset_export.py  test_demo_recording.py  test_demo_replay_e2e.py  test_demo_robenv_e2e.py  test_demo_session.py  test_demos_packaging.py  test_determinism.py  test_diffusion_policy.py  test_domain_randomization.py  test_dr_sweep.py  test_env_config.py  test_env_diagnostics.py  test_env_make_sensor_rigs.py  test_env_refactor.py  test_env_sensor_pipeline_wiring.py  test_env_sensor_rig_yaml.py  test_env_sensor_status_step.py  (+113 more)
(+528 files in other folders)
