[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "robodeploy"
version = "0.2.0"
description = "Backend-agnostic robot learning runtime for simulators and ROS2 hardware."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
  { name = "RoboDeploy contributors" }
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
  "numpy"
]

[project.scripts]
robodeploy = "robodeploy.cli:main"

[project.entry-points."robodeploy.backends"]
# Third-party backends register here, e.g.:
# mybackend = "my_pkg.backends.mybackend:MyBackend"

[project.entry-points."robodeploy.robots"]
# Third-party robot descriptions register here.

[project.entry-points."robodeploy.tasks"]
# Third-party tasks register here.

[project.entry-points."robodeploy.policies"]
# Third-party policies register here.

[project.entry-points."robodeploy.sensors"]
# Third-party sensors register here.

[project.optional-dependencies]
sim = [
  "mujoco"
]
kinematics = [
  "pin"
]
real = [
  "pyrealsense2"
]
isaacsim = []
obs = [
  "wandb>=0.16",
  "tensorboard>=2.15",
  "mlflow>=2.9",
  "GitPython>=3.1",
]
dev = [
  "build",
  "pytest",
  "pytest-rerunfailures>=14.0",
  "jax[cpu]",
  "pyyaml",
  "h5py",
  "torch>=2.0",
  "gymnasium>=0.29",
  "jinja2",
  "matplotlib",
  "jsonschema",
  "scipy",
  "imageio",
]
eval = [
  "jinja2",
  "matplotlib",
  "jsonschema",
  "scipy",
  "imageio",
]
learned = [
  "torch>=2.0",
  "huggingface_hub>=0.20",
  "transformers"
]
training = [
  "torch>=2.0",
  "gymnasium>=0.29",
  "h5py",
  "wandb>=0.16",
  "tensorboard>=2.15",
]
rl = [
  "stable_baselines3>=2.1",
]
teleop = [
  "pynput>=1.7",
  "pygame>=2.5",
  "pyspacemouse>=1.1",
  "lerobot>=0.1",
]
docs = [
  "mkdocs>=1.5",
  "mkdocs-material>=9",
  "pdoc>=14",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["robodeploy*", "benchmarks*"]

[tool.setuptools.package-data]
benchmarks = ["**/*.yaml", "**/*.json", "**/*.md", "leaderboard/**/*"]
robodeploy = [
  "_assets/**/*.json",
  "description/**/*.urdf",
  "description/**/*.yaml",
  "description/**/*.mjcf",
  "description/**/*.xml",
  "description/**/*.stl",
  "description/**/*.dae",
  "description/**/*.obj",
  "description/**/*.json",
  "ros2_assets/**/*.rviz",
  "ros2_assets/**/*.sdf",
  "ros2_assets/**/*.world",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
  "hardware: tests that require physical robot hardware",
  "slow: long-running training integration tests (SB3 100k, PPO reach_target)",
  "optional_nightly: long proxy runs mirrored in ppo-nightly.yml (skip locally unless needed)",
  "live_gazebo: live Gazebo + ROS2 tests (ROBODEPLOY_LIVE_GAZEBO=1, Linux CI)",
  "ci_pick_gate: MuJoCo pick success regression (3 seeds, PR sensor-e2e-linux)",
]
